# HTMLSplitter

./: .gitignore  README.md  config.py  minisource.html  pyproject.toml  pytest.ini  split_msg.py
app/argument_parser/: argument_parser.py
app/exceptions/: exceptions.py
app/html_splitter/: html_splitter.py
argument_parser/: argument_parser.py
html_splitter/: html_splitter.py
tests/: test_split_message.py
