[project]
name = "app"
version = "0.1.0"
description = "Python tool to split origianl html into fixed length fragments"
authors = [
    {name = "Nikita Ekert",email = "ekertn7@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
